--- a/2_CSS/css/harrypoter.css
+++ b/2_CSS/css/harrypoter.css
@@ -1,21 +1,23 @@
-.poseter-box{
+.poster-box {
   position: relative;
 
   margin: 0 50px;
+
+  display: inline-block;
 }
 
 .poster-box img {
-  height:"225px"
+  height: 250PX;
 }
 
-/* p태그는 기본 마진
+/* p 태그는 기본 마진 
 margin-top : 1em;
-margin-borrom : 1em 
+margon-bottom : 1em;
 
-em 단위?
+em 단위 ?
 상대적 크기 단위,
 현재 요소의 font-size를 기준으로
-배율을 정함
+배율을 정함.
 */
 .poster-box p {
   font-size: 150px;
@@ -24,18 +26,34 @@ em 단위?
   color: black;
 
   position: absolute;
-
+  
   bottom: 0;
   left: -50px;
 
-  margin: 0px;
+  margin: 0;
 }
 
-body{
+
+body {
   background-color: black;
 }
 
-h1, h2, h3, h4, h5, h6, p{
+
+h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
+  color: white;
+
+  position: relative;
+  left: 50px;
+}
+
+.contents-box{
+  position: relative;
+  margin: 0 30px;
+  display: inline-block;
+}
+
+.contents-box img {
+  height: 250PX;
 }
