--- a/2_CSS/css/포토폴리오.css
+++ b/2_CSS/css/포토폴리오.css
@@ -13,6 +13,17 @@ main {
   /* margin: auto; */
 }
 
+header {
+  display: flex;
+  position: sticky;
+  top : 0;
+  background-color: white;
+}
+
+.google {
+  display: flex;
+}
+
 .content {
   display: flex;
 }
@@ -21,18 +32,41 @@ main {
   flex-basis: 13%;
 }
 
-.content-2 {
-  flex-basis: 87%;
-
-  display: flex;
-}
-
-.left-icon{
-  font-size: 15px;
-  height: 40px;
+.content-1:hover{
+  height: 100vh;
+  overflow: auto;
   
 }
 
+.content-2 {
+  flex-basis: 87%;
+  margin-left: 10px;
+}
+
+.left-icon {
+  font-size: 15px;
+  height: 40px;
+  border-radius: 20%;
+
+  display: flex;
+  align-items: center;
+
+}
+
+.left-icon:hover {
+  background-color: lightgray;
+  transition-duration: 0.3s;
+
+  cursor: pointer;
+}
+
+#side-top {
+  font-size: 17px;
+  height: 30px;
+
+  display: flex;
+  align-items: center;
+}
 
 .search-area {
   width: 500px;
@@ -60,11 +94,213 @@ main {
 }
 
 #search-btn {
-  flex-basis: 8%;
   cursor: pointer;
   font-size: 20px;
   color: gray;
   border: none;
   background-color: transparent;
   /* transparent : 배경색 투명 */
+}
+
+#logo-side {
+  cursor: pointer;
+  font-size: 20px;
+  color: gray;
+  border: none;
+  background-color: transparent;
+}
+
+
+nav {
+  height: 50px;
+  margin-bottom: 20px;
+
+  position: sticky;
+  /* sticky : 특정 스크롤 위치에 도달했을 때
+    요소가 고정되는 효과를 주는데 사용함.
+    top, bottom, left, right 속성이 필수로 같이 작성되어야 함
+    -> 임계점 도달 시 어느 위치에 부착할지 정해야 하기 때문
+  */
+  top: 0;
+  background-color: white;
+  display: flex;
+}
+
+nav li {
+  flex-basis: 150px;
+}
+
+nav>div {
+  width: fit-content;
+  padding: 8px;
+}
+
+nav a {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+  background-color: rgb(236, 235, 235);
+  height: 100%;
+  padding: 10px;
+
+  display: block;
+  text-align: center;
+  line-height: 50px;
+
+  border-radius: 5px;
+
+  font-size: 14px;
+  border-radius: 20%;
+
+  display: flex;
+  align-items: center;
+}
+
+nav a:active {
+  background-color: black;
+  color: white;
+}
+
+.video {
+  display: flex;
+  flex-wrap: wrap; /* 넘칠 경우 줄 바꿈 */
+  /* gap: 10px; */
+  /* border: 2px solid black; */
+}
+
+.video>div {
+  /* flex: 1; */
+  margin: 0 7px;
+  width: 350px;
+}
+
+.video img {
+  width: 350px;
+  height: auto;
+  border-radius: 15px;
+}
+
+.video img:hover {
+  border-radius: 0%;
+}
+
+.video>div p {
+  text-align: justify;
+  line-height: 30px;
+}
+
+.video-small {
+  display: block;
+
+  cursor: pointer;
+}
+
+.video-small * {
+  margin: 0;
+  padding: 0;
+}
+
+.video-small>div {
+  margin: 0px;
+
+}
+
+.video-under {
+  display: flex;
+}
+
+.video-title {
+  flex-basis: 80%;
+}
+
+.video-dot {
+  flex-basis: 10%;
+
+  display: flex;
+  justify-content: center;
+
+  padding: 7px;
+}
+
+.video-image {
+  width: 10px;
+  flex-basis: 10%;
+}
+
+.one {
+  font-size: 14px;
+}
+
+.two {
+  font-size: 12px;
+  color: gray;
+}
+
+hr {
+  margin-right: 23px;
+}
+
+
+.live-stream {
+  display: flex;
+  flex-wrap: wrap; /* 넘칠 경우 줄 바꿈 */
+  /* gap: 10px; */
+  /* border: 2px solid black; */
+}
+
+.live-stream>div {
+  /* flex: 1; */
+  margin: 0 7px;
+  width: 350px;
+}
+
+.live-stream img {
+  width: 350px;
+  height: auto;
+  border-radius: 15px;
+}
+
+.live-stream img:hover {
+  border-radius: 0%;
+}
+
+.live-stream>div p {
+  text-align: justify;
+  line-height: 30px;
+}
+
+.video-small {
+  display: block;
+}
+
+.video-small * {
+  margin: 0;
+  padding: 0;
+}
+
+.video-small>div {
+  margin: 0px;
+
+}
+
+.video-under {
+  display: flex;
+}
+
+.video-title {
+  flex-basis: 80%;
+}
+
+.video-dot {
+  flex-basis: 10%;
+
+  display: flex;
+  justify-content: center;
+
+  padding: 7px;
+}
+
+.video-image {
+  width: 10px;
+  flex-basis: 10%;
 }
